# pgCK

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  ISSUE.pgRDF.0.5.1.pgatomic-initialization-failure.md  Justfile  LATEST.md  LICENSE  NOTICE  PROVENANCE.md  README.md  RELEASE_NOTES.md  SPEC.CKP.3.8.MINIMAL-rc3.md  SPEC.PGCK.DEPLOY.v0.1.md  VERIFICATION_REPORT.md  pgck.control  requirements.txt
.cargo/: config.toml
.github/workflows/: ci.yml  publish-pgck-web.yml  release.yml  update-latest-md.yml
compose/: builder.Containerfile  builder.Containerfile.dockerignore  compose.callout-e2e.yml  compose.localhost.yml  compose.nats-wss.yml  compose.yml
compose/layers/pgck-web/: build.sh
compose/nats/: nats-server.callout.conf  nats-server.conf
docker/: Dockerfile  entrypoint.sh
docs/: DEV.OCIGER-ALLINONE.md  v0.1.2-release-issues.md
docs/plans/: 2026-05-16-pgck-minimal-governed-core.md
docs/specs/: 2026-05-16-pgck-core-design.md
docs/superpowers/plans/: 2026-05-26-pgck-web-oci-layer.md
docs/superpowers/specs/: 2026-05-20-goal-task-kernel-board-mvp-design.md
examples/: example.kernel.ttl  goal-task-board.kernel.ttl
fixtures/: README.md
ontology/: README.md  affordance.ttl  core.ttl  delegation.ttl  delivery.ttl  goal.ttl  proof.ttl  task.ttl  validate.ttl
scripts/: README.md  dev-callout-e2e.sh  dev-outbox-drain.sh  export_ck_ttls.py  gen_protocol_json.py  generate-dev-certs.sh  gh-watch.sh  import_ttls_into_pgck.py  pgck-root-redirect.sh  run-dispatcher.sh  smoke-s34-fresh-install.sh  tutorial_dispatcher.py
sql/: dispatch.sql  pgck--0.1.0.sql  pgck--0.1.1.sql  pgck--0.1.2--0.1.4.sql  pgck--0.1.2.sql  pgck--0.1.4--0.1.5.sql  pgck--0.1.5--0.1.7.sql  pgck--0.1.5.sql  pgck--0.1.7--0.1.8.sql  pgck--0.1.7.sql  pgck--0.1.8--0.1.9.sql  pgck--0.1.8.sql  pgck--0.1.9--0.2.0.sql  pgck--0.2.0--0.2.1.sql  pgck--0.2.1--0.2.2.sql  pgck--0.2.2--0.2.3.sql  pgck--0.2.2.sql  pgck--0.2.3--0.2.4.sql  pgck--0.2.4--0.2.5.sql  pgck--0.2.5--0.2.6.sql  pgck--0.2.6--0.3.0.sql  pgck--0.3.0--0.3.1.sql  pgck--0.3.2--0.3.3.sql  pgck--0.3.3--0.3.4.sql  pgck--0.3.4--0.3.5.sql  pgck--0.4.1--0.4.2.sql  pgck--0.4.10--0.4.11.sql  pgck--0.4.11--0.4.12.sql  pgck--0.4.12--0.4.13.sql  pgck--0.4.13--0.4.14.sql  pgck--0.4.14--0.4.15.sql  pgck--0.4.15--0.4.16.sql  pgck--0.4.16--0.4.17.sql  pgck--0.4.17--0.4.18.sql  pgck--0.4.18--0.4.19.sql  pgck--0.4.19--0.4.20.sql  pgck--0.4.2--0.4.3.sql  pgck--0.4.20--0.4.21.sql  pgck--0.4.3--0.4.4.sql  pgck--0.4.4--0.4.5.sql  (+5 more)
sql/test/: s10_affordances.sql  s11_ci_a4_role_floor.sql  s12_ci_a3_ring1_definer.sql  s13_ci_a2_dispatch_only.sql  s14_ci_a1_sidecar.sh  s15_alpha_web2_verbs.sql  s16_ci_b5_plane_epoch.sql  s17_ci_b4_registry.sql  s18_ci_b3_validate_report.sql  s19_ci_b2_plane_route.sql  s20_ci_b1_routing_authority.sql  s21_ci_c4_plans_table.sql  s22_ci_c3_plan_compiler.sql  s23_ci_c2_epoch_invalidation.sql  s24_ci_d6_governance_ontology.sql  s25_ci_d5_propose_change.sql  s26_ci_d4_vote_quorum.sql  s27_ci_d3_apply_cascade.sql  s28_ci_d2_fenced_rawttl.sql  s29_ci_e5_typed_query.sql  s30_ci_e4_reach.sql  s31_ci_e3_transition_snapshot.sql  s32_ci_e2_concept_match.sql  s33_ci_e1_hot_loop.sql  s35_instance_retire.sql  s36_instance_update_patch.sql  s37_tier1_consumer_fixes.sql  s38_generic_typed_create.sql  s39_graph_apply_type_evolution.sql  s3_nats_roundtrip.sh  s40_reach_edge_materialization.sql  s41_governed_query_affordance.sql  s42_query_shape.sql  s43_declared_predicates.sql  s44_transition_map.sql  s45_update_patch.sql  s46_validation_report.sql  s47_governed_concept_match.sql  s48_csvc_domain_shape.sql  s48_domain_kernel_shape.sql  (+20 more)
sql/v0.2-drafts/: pgck--0.1.2--0.2.0.sql
src/: auth_callout.rs  bgworker.rs  inbound_dispatch.rs  jwt_verify.rs  lib.rs  materialize_drain.rs  nats_client.rs  publish_drain.rs
src/nats/: mod.rs  parser.rs  router.rs  server.rs
tests/: test_board.py  test_gateway.py  test_nats_wss_hardening.py  test_service.py  test_web.py  test_web_demo.py
tests/e2e/: README.md  api-integration.spec.ts  board-page.spec.ts  cka-9-v13-smoke.spec.ts  display-page.spec.ts  manual-test.spec.ts  playwright.config.ts
tools/: render-latest-md.py
web/: .dockerignore  Dockerfile.pgck-web  app.py  board.py  protocol.py  root-redirect.html  service.py
web/app/: display.py  main.py  tasks.py
web/app/static/: display.html  tasks.html
web/static/: app.css  board-app.js  display-app.js  index.html  protocol.json  tasks.html  tutorial.html
web/static/explorer/: index.html
web/static/forge/: index.html
web/static/shared/: ck.js
web/static/web2/: README.md  index.html
web/static/web2/kernels/board/: engine.js
web/static/web2/kernels/explorer/: engine.js
web/static/web2/kernels/rdfjs/: engine.js
web/static/web2/kernels/settings/: engine.js
web/static/web2/kernels/signage/: engine.js
web/static/web2/kernels/studio/: engine.js
web/static/web2/shell/: app.css  gridcanvas.js  rail.js  surface.js
web/static/web2/spine/: bus.js  ingest.js  props.js  transport.js
web/static/web3/: index.html
web/static/web3/substrate/: konva-scene.js
web_demo/: Dockerfile.pgck-web  __init__.py  app.py  protocol.py  service.py
web_demo/static/: app.css  app.js
