[package]
name = "pgck"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL Concept Kernel extension — NATS bridge + SHACL validator + materializer, in-database"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "=0.16.0"            # same major as pgRDF
async-nats = "0.38"          # NATS client (connects to the embedded server)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"          # replaces the HMAC stand-in in ckp.seal

[dev-dependencies]
pgrx-tests = "=0.16.0"

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
