[package]
name = "pgck"
version = "0.2.0"
edition = "2021"
description = "PostgreSQL Concept Kernel extension — NATS bridge + SHACL validator + materializer, in-database"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

# pgrx 0.12+ requires a small bin target used by `cargo pgrx package`
# during schema generation and by `cargo pgrx test`. See
# src/bin/pgrx_embed.rs. Mirrors pgRDF.
[[bin]]
name = "pgrx_embed_pgck"
path = "./src/bin/pgrx_embed.rs"

[features]
# No default feature — every invocation MUST pick a PG major explicitly
# (cargo pgrx run pgN, --no-default-features --features pgN). Mirrors
# pgRDF: pgrx's per-PG features are mutually exclusive, so a default
# makes the wrong thing implicit.
default = []
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []
# The embedded NATS Core server (hand-rolled, src/nats/). Gated the
# same idiomatic way pgN forwards to pgrx/pgN. See
# docs/specs/2026-05-16-pgck-core-design.md §4.
#
# `embedded-nats` and `nats-client` are MUTUALLY EXCLUSIVE — src/lib.rs
# emits a compile_error! when both are enabled. Pick exactly one (or
# neither, for the default minimal build).
#
# `embedded-nats` profile  (dev / unit tests / S3 hermetic mode):
#   - pgCK hosts its own NATS Core server on :4222 from src/nats/server.rs
#   - bgworker tick loop starts the listener; no outbound NATS client
#   - no JetStream, no headers (NATS Core wire only)
#
# `nats-client` profile  (canonical bundle / cluster mode — S4):
#   - pgCK is a NATS CLIENT of the bundled / cluster nats-server
#   - bgworker LISTENs ckp_ledger_appended, publishes via async-nats
#   - JetStream-assist available when pgck.nats_js_stream GUC is set
#   - per SPEC.PGCK.NATS-BIDIRECTIONAL.v0.2 §3 and TASKS.PGCK.S4-BUNDLED-NATS.v0.1
embedded-nats = ["dep:tokio"]
nats-client = ["dep:tokio", "dep:async-nats"]

[dependencies]
pgrx = "0.16"               # caret range, exactly as pgRDF — must match
                            # the cargo-pgrx CLI (setup-pgrx installs
                            # ^0.16 → 0.16.1; an `=0.16.0` pin makes
                            # `cargo pgrx test` reject the mismatch).
# NATS client library — used in the `nats-client` profile when pgCK
# acts as a client of the bundled / cluster nats-server. Optional +
# gated by `nats-client`. Default features include `jetstream`,
# `websockets`, server_2_10..2_14 — keep them; the JS-assist publish
# path (TASKS.PGCK.S4-BUNDLED-NATS.v0.1 step 2) uses the JetStream API.
async-nats = { version = "0.48", optional = true }
# Tokio runtime — used by BOTH the embedded server's accept loop
# (`embedded-nats`) AND the bgworker NATS client (`nats-client`).
# Optional; either feature pulls it in.
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "macros"], optional = true }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"          # replaces the HMAC stand-in in ckp.seal

[dev-dependencies]
pgrx-tests = "0.16"          # caret range, must match pgrx + cargo-pgrx

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
